# MonarchBot

./: .replit  BOT_TOKEN.py  LICENSE  NOTES  keep_alive.py  main.py  pyproject.toml  uptimecount.py  website.html
cogs/: cog1test.py
