[tool.poetry]
name = "MonarchBot.py"
version = "0.1.0"
description = ""
authors = ["Kiet Pham <kiet.riley2005@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
youtube-dl = "^2021.1.8"
PyNaCl = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
